# Heat_Transfer_CUDA

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  colormap.cu  headMap.cu  heat.cu  heat.cuh  main.cpp  main.cu  testCuda.cu  testCuda.hpp  timing_test.cpp  timing_test.cu
